# AppBuilder

./: .clang-format  .gitignore  .sconsign.dblite  Builder.py  CMakeLists.txt  CMakeSettings.json  README.md  SConstruct  SConstruct.py  build.bat  build.py  cbuild.json  cmd.exe.lnk  package.py
.github/workflows/: BuildTest.yml  Release.yml  cmake.yml
Defaults/UInterface/: Default.yaml
Examples/: CBuild.py  CmakeLists.txt  Operators.h  UInterfaces.h
Examples/Physics/: CMakeLists.txt
Examples/Renders/: CMakeLists.txt
Examples/Renders/Raster/: CMakeLists.txt
Examples/Renders/RayCast/: CMakeLists.txt
Examples/Renders/RayCast/private/: RayCast.cpp
Examples/private/: main.cpp
Releases/ReleaseNov16/: Raster.lib  RayCast.lib  Types.lib
Sourse/: CMakeLists.txt
Sourse/Application/: Application.h  CBuild.py  CMakeLists.txt  Context.cpp  Core.cpp  Entry.cpp  FileReader.cpp  KeyMap.cpp  Logic.cpp  Main.cpp  Operator.cpp  Print.cpp  Seance.cpp  UI.cpp  UILayout.cpp  UInputsMap.cpp  UInterface.cpp  Win32API.cpp  Window.cpp
Sourse/Application/Configuration/: UI.yaml
Sourse/Application/Configuration/KeyMaps/: Default.txt
Sourse/Application/Configuration/UInputsMap/: Default.yaml
Sourse/Application/Configuration/UInterface/: Default.yaml
Sourse/Application/Configuration/UIs/: Default.yaml
Sourse/Application/Core/: Operator.h  Print.h  Seance.h
Sourse/Application/Core/private/: Log.cpp  Main.cpp  Operator.cpp  Seance.cpp
Sourse/Application/Data/: Seance.h
Sourse/Application/Data/private/: Seance.cpp
Sourse/Application/Operator/: Operator.h  Templates.h
Sourse/Application/Operator/private/: OPTemplates.cpp  Operator.cpp  Templates.cpp
Sourse/Application/Ops/: Ops.h
Sourse/Application/Ops/private/: Ops.cpp
Sourse/Application/Platform/: SysHandler.h  Win32API.h
Sourse/Application/Platform/private/: SysHandler.cpp  Win32API.cpp  Win32Window.cpp  Win32Window.h
Sourse/Application/UI/: UITemplates.cpp  UITemplates.h  UInputs.h  UInputsMap.cpp  UInputsMap.h  UInterface.cpp  UInterface.h  Window.cpp  Window.h
Sourse/Application/UI/Configuration/UInputsMap/: Default.yaml
Sourse/Application/UI/Configuration/UInterface/: Default.yaml
Sourse/Application/UI/private/: UITemplates.cpp  UInputsMap.cpp  UInterface.cpp  Window.cpp
Sourse/Application/UI/public/: UInputsMap.h  UInterface.h
Sourse/Application/public/: Context.h  Event.h  FileReader.h  KeyMap.h  Logic.h  Operator.h  Print.h  Seance.h  UI.h  UILayout.h  UInputsMap.h  UInterface.h  Win32API.h  Window.h
Sourse/Common/: CMakeLists.txt
Sourse/Common/Types/: CMakeLists.txt  Matrix.cpp
Sourse/Common/Types/public/: Stack.h
Sourse/PhysEngine/: CMakeLists.txt
Sourse/RenderEngines/: CMakeLists.txt
Sourse/RenderEngines/Raster/: CMakeLists.txt
Sourse/RenderEngines/RayCast/: CMakeLists.txt  RayCast.cpp  RayCast.h
Sourse/RenderEngines/RayCast/private/: RayCast.cpp
Sourse/RenderEngines/RayCast/public/: RayCast.h
Sourse/Renders/RayCast/: CMakeLists.txt
Sourse/Renders/RayCast/private/: RayCast.cpp
Sourse/Types/: AllocatorPolicy.h  CBuild.py  CMakeLists.txt  Color.h  FrameBuff.cpp  FrameBuff.h  Hierarchy.h  LinkedList.h  Macros.h  MathMacros.h  Mem.cpp  Mem.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Parser.cpp  Parser.h  Print.cpp  Property.cpp  Property.h  Ray.cpp  Ray.h  Rect.h  Sort.h  SortPolicy.h  Stack.h  Strings.cpp  Strings.h  Timer.cpp  Trig.cpp  Types.h  Vec3.cpp
Sourse/Types/BitMap/: BitMap.h
Sourse/Types/Color/: FrameBuff.h
Sourse/Types/Containers/: Array.h  LinkedList.h  List.h
Sourse/Types/Geometry/: Mesh.h  Rect.h  Vec2.h
Sourse/Types/Geometry/private/: Mesh.cpp  Ray.cpp  Trig.cpp
Sourse/Types/IO/: Parser.h
Sourse/Types/IO/private/: Parser.cpp
Sourse/Types/Memory/: Mem.h
Sourse/Types/Memory/private/: Mem.cpp
Sourse/Types/Strings/private/: Strings.cpp
Sourse/Types/Time/private/: Timer.cpp
Sourse/Types/private/: AllocatorPolicy.cpp  Mem.cpp  Mesh.cpp  Object.cpp  Parser.cpp  Property.cpp  Ray.cpp  SortPolicy.cpp  Strings.cpp  Timer.cpp  Trig.cpp
Sourse/Types/public/: FrameBuff.h  Hierarchy.h  LinkedList.h  MathMacros.h  Matrix.h  Mem.h  Object.h  Parser.h  Print.h  Property.h  Ray.h  Rect.h  Stack.h  Strings.h  Timer.h  Trig.h  Types.h  Vec2.h  Vec3.h
Tests/: CBuild.py  CmakeLists.txt  Test.cpp
bld/: bld.py  compilers.py  config.py
blds/vsbuilder/: AppBuider.sln  postbuild.py
builder/: CMakeLists.txt  CMakeSettings.json  README.md  build.lnk  build.py  cache.json  commands.py  common.py  compiler.py  cparser.py  cpparser.py  cproject.py  main.py
builder/binary/: .sconsign.dblite  Builder.py  GccCompile.py  SConstruct  cache.json  compile.bat  compile.lnk  compile.py  compiler.py  cparser.py
builder/envs/: Linux64.json  Win32.json  Win64.json  Win64Debug.json  default.json
builder/ide/: CMakeLists.txt
config/: Nodes.sln
config/Application/: Application.def  Application.vcxproj  Application.vcxproj.filters
config/Object/: Object.vcxproj  Object.vcxproj.filters
config/TestApp/: TestApp.vcxproj  TestApp.vcxproj.filters
config/Types/: Types.vcxproj  Types.vcxproj.filters
docs/: CProjectRulles.md  Doxyfile  LICENCE
docs/latex/: _c_make_lists_8txt.tex  _frame_buff_8cpp.tex  _frame_buff_8h.tex  _frame_buff_8h.tex.tmp  _frame_buff_8h__dep__incl.md5  _frame_buff_8h__incl.md5  _key_map_8cpp.tex  _key_map_8cpp__incl.md5  _key_map_8cpp_a0bfacaf30d8404f3aad035cacfbe0ef3_icgraph.md5  _key_map_8cpp_a2f04966e6b69852588844485c4a885c8_cgraph.md5  _key_map_8cpp_a2f04966e6b69852588844485c4a885c8_icgraph.md5  _key_map_8cpp_a411394e783c76aba30f830a9f69320f6_icgraph.md5  _key_map_8cpp_a734d12b7d79141e51120839fc7e07834_icgraph.md5  _key_map_8cpp_a834c88e3fb50b1e812245016065a10e1_icgraph.md5  _key_map_8cpp_af97d80a3290f76d9317c6c6718bbcf5d_icgraph.md5  _key_map_8h.tex  _key_map_8h__dep__incl.md5  _key_map_8h__incl.md5  _linked_list_8h.tex  _linked_list_8h__dep__incl.md5  _linked_list_8h__incl.md5  _main_8cpp.tex  (+365 more)
modules/: README.md
samples/: CmakeLists.txt
sourse/: README.md
tests/: README.md
tmp/: Operators.h  UInterface.cpp  UInterfaces.h
(+199 files in other folders)
